ingress/nyamnyam-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nyamnyam-web-ingress
  namespace: nyamnyam
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    # 현재 배포중인 서비스
    - host: www.nyamnyam.kr
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nyamnyam-nextjs
              port:
                number: 80
    # canary 테스트 서비스
    - host: canary.nyamnyam.kr
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nyamnyam-nextjs-canary
              port:
                number: 80
